# SimpleASCIIArt

./: .gitignore  CMakeLists.txt  README.md  SimpleAsciiArt Structure  setupCmake.bat  setupCmake.sh
ExamplePic/: NukeThumb.tga
include/: DelayText.h
lib/SimpleAsciiArt/: CMakelists.txt
lib/SimpleAsciiArt/include/: AsciiPainter.h  ContrastControl.h  TextSelector.h
lib/SimpleAsciiArt/src/: AsciiPainter.cpp  ContrastControl.cpp  TextSelector.cpp
lib/TGALoader/: CMakeLists.txt
lib/TGALoader/include/: TGA.h
lib/TGALoader/src/: TGA.cpp
src/: DelayText.cpp  main.cpp
